# phishing-defense-pipeline

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  claude_task_build.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/eval/: labeled.jsonl
docs/: PhishGuard_系統架構_評估結果與成本分析.docx
eval/: build_public_dataset.py  compare.py  evaluate.py
prompts/: stage1_filter.txt  stage2_intent.txt  stage3_briefing.txt
src/phishguard/: __init__.py  config.py  evaluation.py  forensics.py  ioc.py  llm_client.py  mitre.py  parsing.py  pipeline.py  privacy.py  schema.py  stage1_filter.py  stage2_intent.py  stage3_briefing.py
tests/: test_compare.py  test_config.py  test_evaluate.py  test_forensics.py  test_ioc.py  test_llm_client.py  test_mitre.py  test_parsing.py  test_pipeline.py  test_privacy.py  test_schema.py  test_stage1.py  test_stage2.py  test_stage3.py
